k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microservices

spec:
  selector:
    app: auth-service

  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001

  type: ClusterIP
