k8s/bill-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bill-service
  namespace: microservices

spec:
  selector:
    app: bill-service

  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002

  type: ClusterIP
