k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: microservices

spec:
  selector:
    app: frontend-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
