k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Auth health
          - path: /api/auth/health/
            pathType: Exact
            backend:
              service:
                name: auth-service
                port:
                  number: 8001

          # Auth API
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001

          # Bill health
          - path: /api/bills/health/
            pathType: Exact
            backend:
              service:
                name: bill-service
                port:
                  number: 8002

          # Bill API
          - path: /api/bills/
            pathType: Prefix
            backend:
              service:
                name: bill-service
                port:
                  number: 8002

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
